# FinRobot-AF

./: .env.sample  .gitignore  FINAL_STATUS.md  Makefile  ORGANIZATION_SUMMARY.md  README.md  VERIFICATION_CHECKLIST.md  environment.yml  pyproject.toml  requirements.txt  setup.py
config/: README.md  llm_providers.json
config/workflows/: README.md  fls_extraction.json  sentiment_analysis.sample.json
data/: README.md
data/10k_filings/: 1800_2020.json  1961_2020.json  2098_2020.json  2178_2020.json  2186_2020.json
docs/: DOCUMENTATION_INDEX.md  PRE_RELEASE_NOTE.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  REPORT_MANAGEMENT.md  configuration.md  installation.md  quick-start.md
docs/api/: agents.md
docs/development-reports/: FINAGENT_IMPLEMENTATION_COMPLETE.md  NVIDIA_Analysis_20251108_184808.md  README.md
docs/examples/: fls_comparison.md  fls_extraction.md
docs/migration/: from-autogen.md
docs/reference/: faq.md
docs/tutorials/: 01-market-analysis.md
docs/user-guide/: agents.md  workflows.md
examples/: README.md  basic_market_analysis.py  fls_workflow.py  investment_report_generation.py  multi_agent_collaboration.py  nvidia_stock_analysis.py  sentiment_workflow.py  simple_fls_extraction.py
finrobot/: __init__.py  config.py  llm_config.py  toolkits.py  utils.py  workflow_config.py
finrobot/agents/: __init__.py  agent_library.py  response_utils.py  workflows.py
finrobot/data_source/: finnlp_utils.py  fmp_utils.py  reddit_utils.py  sec_utils.py
finrobot/functional/: __init__.py  analyzer.py  charting.py  fls_detection.py  reportlab.py
finrobot/utils/: __init__.py  data_loader.py
finrobot/workflows/: __init__.py  finagent_pipeline.py  fls_pipeline.py
results/: README.md
scripts/: batch_analyze_10k.py  batch_fls_extraction.py  install_conda.bat  install_conda.sh  organize_reports.sh
tests/: README.md  __init__.py  run_all.py  test_fls_detection.py  test_llm_config.py  test_sentiment.py  test_sentiment_qwen.py
tests/e2e/: test_finagent_pipeline.py  test_nvidia_analysis.py
tests/integration/: test_integration.py  test_multi_agent.py
tests/tools/: test_real_api_calls.py  test_tool_calling.py
tests/unit/: test_basic.py
