[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finrobot-af"
version = "2.0.0"
description = "Multi-Agent Framework for Financial Analysis (Agent Framework Edition)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AI4Finance Foundation", email = "contact@ai4finance.org"}
]
keywords = [
    "finance",
    "agent-framework",
    "multi-agent",
    "financial-analysis",
    "ai",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Agent Framework - Core dependencies
    # Install from PyPI (preview release)
    "agent-framework-core",

    # LLM providers
    "openai>=1.0.0",

    # Financial libraries
    "finnhub-python",
    "yfinance",
    "mplfinance",
    "backtrader",
    "sec-api",

    # Data handling
    "numpy==1.26.4",
    "pandas==2.0.3",
    "pypdf2",
    "reportlab",

    # Historical data
    "praw",
    "tushare",
    "pandas-datareader",

    # PDF and document processing
    "pdfkit==1.0.0",
    "marker-pdf",

    # NLP and AI utilities
    "langchain==0.1.20",
    "nltk==3.8.1",
    "huggingface-hub",

    # Utilities
    "aiohttp==3.8.5",
    "ratelimit==2.2.1",
    "requests==2.31.0",
    "scikit-learn==1.5.0",
    "starlette==0.37.2",
    "tenacity==8.3.0",
    "tqdm==4.66.1",
    "typing-extensions>=4.11",
    "unstructured==0.8.1",

    # Visualization
    "matplotlib",

    # Vector store for RAG
    "chromadb",
    "sentence-transformers",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ipython",
]

jupyter = [
    "ipython",
    "jupyter",
    "notebook",
    "ipywidgets",
]

all = [
    "finrobot-af[dev,jupyter]",
]

[project.urls]
Homepage = "https://github.com/AI4Finance-Foundation/FinRobot"
Documentation = "https://github.com/AI4Finance-Foundation/FinRobot/docs"
Repository = "https://github.com/AI4Finance-Foundation/FinRobot"
Issues = "https://github.com/IIIIQIIII/FinRobot-AF/issues"

[project.scripts]
finrobot = "finrobot.cli:main"

[tool.setuptools]
packages = ["finrobot"]

[tool.setuptools.package-data]
finrobot = [
    "data_source/**/*",
    "functional/**/*",
    "agents/**/*",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["finrobot"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
